--- a/public/index.html
+++ b/public/index.html
@@ -1,58 +1,164 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="https://depts.washington.edu/acelab/proj/dollar/$1.png">
 
- <html>
- 
+	<title>SS</title>
 	<style>
-	.toolbarbutton {
-		width: 50px;
-	}
-	#left {
-	width: 750px;
-	float:left;
-	}
-	.button {
-		background-color: white;
-		border: 2px solid #555555;
-		color: black;
-		padding: 15px 32px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 12px;
-	}
+		#sketchpad {
+			float:left;
+			height:400px;
+			width:400px;
+			border:2px solid;
+			border-radius:4px;
+			position:relative;
+			}
+			#skp {
+    /* Prevent nearby text being highlighted when accidentally dragging mouse outside confines of the canvas */
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		}
+		#canvasimg {
+			border:2px solid;
+			border-radius:4px;
+			position:relative;
+			height:230px;
+			width:230px;
+		}
 	</style>
- 
- <script src="javascripts/main.js"></script>
- <script src="javascripts/xhs.js" defer></script>
- <style>
-	body, h1, h2, h3, h4, h5, h6  {
-	  font-family: Arial, Helvetica, sans-serif ;
-	}
-</style>
-    <body onload="init()">
-	<div id="intro" style="position:relative;width:750px">
-			<h2>Single Stroke Gesture recognizer</h2>
+	<script>
+		var slider = document.getElementById("kRange");
+		function update(val){
+			var txt = document.getElementById("K"); 
+			txt.innerHTML = "K = " + val;
+		}
+	</script>
+	<script src="./javascripts/resCanvas.js"></script>
+</head>
+<body onload="init()">
+	<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">Single Stroke Gesture recognizer</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Github Repo</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Add New Symbol</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" aria-current="page" href="#">List of All Symbols</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" aria-current="page" href="#">Info</a>
+				  </li>
+				</ul>
+				<span class="navbar-text">
+				  : : thaqib0437
+				</span>
+			  </div>
+			</div>
+		  </nav>
 	</div>
-	<div id="sketch" style="position:relative"> 
-        <div style="position:absolute;top:30;left:45;">Draw With Mouse Here</div>
-		<canvas id="can" width="400" height="400" style="position:absolute;top:50;left:45;border:2px solid;"></canvas>
-		<div style="position:absolute;top:500;left:45;"><x, y> Mouse Points</div>
-		<div style="position:absolute;top:30;left:500;">Thumbnail (right click to copy)</div>
-		<div style="position:absolute;top:150;left:500;">
-			<h1 id="sym", style="color: darkblue;">Result: </h1>
-			<input type="range" name="rangeInput" min="1" max="1000" onchange="updateVal(this.value);">
-			<p><h3 id="k">K=</h3></p>
-			<button id="get-btn" class="button">Recognise</button>
+	<div id="sketch"class="container">
+		<div class="row">
+			<div class="col-12 col-md-6">
+				<div class="col-sm-12">
+					<p>Draw Here</p>
+				</div>
+				<canvas id="sketchpad" height="400" width="400">
+				</canvas>
+			</div>
+			<div class="col-12 col-md-6 ">
+				<h1 class="rec">
+					Symbol: NONE
+				</h1>
+				<form class="row g-3 needs-validation" novalidate>
+					<label class="form-label" for="customRange2">Sample Points</label>
+					<div class="range">
+						<p id="K">K=5</p>
+						<input type="range" class="form-range" min="5" max="100" id="kRange" value="5" onchange="update(this.value);" required/>
+					</div>
+					<div class="col-md-3">
+						<label for="validationCustom04" class="form-label">Input</label>
+						<select class="form-select" id="validationCustom04" required>
+						  <option selected value="">Single Stroke</option>
+						  <option disabled>Multi Stroke</option>
+						</select>
+						<div class="invalid-feedback">
+						  Please select a valid state.
+						</div>
+					  </div>
+  
+					<div class="col-md-3">
+					  <label for="validationCustom04" class="form-label">Sampling</label>
+					  <select class="form-select" id="validationCustom04" required>
+						<option selected value="">K-sampling</option>
+						<option disabled>Spatial Sampling</option>
+					  </select>
+					  <div class="invalid-feedback">
+						Please select a valid state.
+					  </div>
+					</div>
+					<div class="col-md-3">
+					  <label for="validationCustom05" class="form-label">Output</label>
+					  <select class="form-select" id="validationCustom04">
+						<option selected value="">Single</option>
+						<option disabled>Best 5</option>
+						<option disabled>Best 10</option>
+					  </select>
+					  <div class="invalid-feedback">
+						Please provide a valid zip.
+					  </div>
+					</div>
+					<div class="col-12">
+					  <div class="form-check">
+						<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+						<label class="form-check-label" for="invalidCheck">
+						  Agree to terms and conditions
+						</label>
+						<div class="invalid-feedback">
+						  You must agree before submitting.
+						</div>
+					  </div>
+					</div>
+					<div class="col-6">
+					  <button class="btn btn-primary" type="submit">Recognize</button>
+					  <button class="btn btn-primary" type="submit" onclick="clearCanvas(canvas,ctx);">Clear</button>
+					</div>	
+				  </form>	
+			</div>
+		</div>
+		<div class="row">
+			
+			<div class="col-12 col-md-6">
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Points</label>
+					<textarea readonly class="form-control" id="points" rows="10"></textarea>
+				  </div>
+				
+			</div> 
+			<div class="col-12 col-md-6">
+				<p>
+					Preview Image
+				</p>
+				<img id="canvasimg" width="100 style="display:none;">
+			</div>
+		</div>
+	</div>
 
-		</div>
-		
-        <img id="canvasimg" style="position:absolute;top:50;left:500;" width="100 style="display:none;">
-		
-       
-        <input type="button" class="toolbarbutton" value="copy" id="btn" size="50" onclick="copy()" style="position:absolute;top:475;left:50;">
-        <input type="button" class="toolbarbutton" value="paste" id="pst" size="23" onclick="paste()" style="position:absolute;top:475;left:100;">
-		<input type="button" class="toolbarbutton" value="clear" id="clr" size="23" onclick="erase()" style="position:absolute;top:475;left:150;">
-		<textarea readonly id="points" name="points" rows="30" cols="30" style="position:absolute;top:495;left:45;"></textarea>
-		
-		</div>
-    </body>
-    </html>
+</body>
+</html>
