--- a/public/index.html
+++ b/public/index.html
@@ -128,9 +128,9 @@
 					</div>
 					<div class="col-12">
 					  <div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+						<input class="form-check-input" type="checkbox" value="" id="invalidCheck" disabled>
 						<label class="form-check-label" for="invalidCheck">
-						  Agree to terms and conditions
+						  Tensorflow?
 						</label>
 						<div class="invalid-feedback">
 						  You must agree before submitting.
@@ -160,6 +160,9 @@
 				<img id="canvasimg" width="100 style="display:none;">
 			</div>
 		</div>
+		<p class="text-danger">
+			Disabled Features are under development
+		</p>
 	</div>
 
 </body>
